# upscale-backend

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py  worker.py
app/v1/: server.py
app/v2/: upscale.py
test/: test.py
